k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-demo-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-demo-customer
  template:
    metadata:
      labels:
        app: ms-demo-customer
    spec:
      containers:
      - name: ms-demo-customer
        image: #ACR_NAME.azurecr.io/ms-demo-customer:#COMMIT_SHORT_SHA
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "256m"        
---
apiVersion: v1
kind: Service
metadata:
  name: ms-demo-customer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ms-demo-customer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-demo-customer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod    
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - epariona2025devops.zapto.org
    secretName: secret-tls 
  rules:
    - host: epariona2025devops.zapto.org
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: ms-demo-customer
                port:
                  number: 80
